# mynewt-mcumgr

./: .gitignore  .rat-excludes  .travis.yml  CMakeLists.txt  Kconfig  README-mynewt.md  README-zephyr.md  README.md  protocol.md  repository.yml
.github/: project.yml
.github/workflows/: build_cc_target.yml  newt_test_all.yml
cborattr/: Kconfig  pkg.yml
cborattr/src/: cborattr.c
cborattr/test/: pkg.yml
ci/: zephyr_install.sh  zephyr_run.sh
cmd/: CMakeLists.txt  Kconfig
cmd/fs_mgmt/: CMakeLists.txt  Kconfig  pkg.yml  syscfg.yml
cmd/img_mgmt/: CMakeLists.txt  Kconfig  pkg.yml  syscfg.yml
cmd/log_mgmt/: CMakeLists.txt  Kconfig  pkg.yml
cmd/memfault_mgmt/: pkg.yml  syscfg.yml
cmd/os_mgmt/: CMakeLists.txt  pkg.yml  syscfg.yml
cmd/shell_mgmt/: CMakeLists.txt
cmd/stat_mgmt/: CMakeLists.txt  Kconfig  pkg.yml  syscfg.yml
ext/: CMakeLists.txt
ext/base64/: CMakeLists.txt  pkg.yml
ext/base64/test/: pkg.yml
ext/tinycbor/: CMakeLists.txt  Makefile  pkg.yml
ext/tinycbor/src/: cbor.h  cbor_buf_reader.c  cbor_defs.h  cborencoder.c  cborerrorstrings.c  cborparser.c  cbortojson.c  cborvalidation.c  src.pri
ext/tinycbor/tests/cpp/: tst_cpp.cpp
ext/tinycbor/tests/encoder/: tst_encoder.cpp
ext/tinycbor/tests/parser/: tst_parser.cpp
ext/tinycbor/tests/tojson/: tst_tojson.cpp
ext/tinycbor/tools/cbordump/: cbordump.c
ext/tinycbor/tools/json2cbor/: json2cbor.c
mgmt/: pkg.yml
mgmt/src/: mgmt.c
omp/: pkg.yml
omp/src/: omp.c
port/libmcu_cbor/: cbor_port.c  (+1 more)
smp/: pkg.yml
transport/: smp-console.md
util/: pkg.yml
zephyr/: module.yml
(+95 files in other folders)
